Test admin/confirm routes to render and redirect pages

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -6,19 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Orders</title>
 
-  <!-- External CSS -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-  <style> @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap');</style>
-
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/order_details.css">
-  <link rel="stylesheet" href="../styles/layout.css">
-  <link rel="stylesheet" href="../styles/typography.css">
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
@@ -37,7 +26,7 @@
 
             <div class="details">
 
-              <h3><%= orders %></h3>
+              <!-- <h3><%= orders %></h3> -->
 
               <!-- contains all of the details from the table orders -->
               <!-- for (const order_details of orderDetails) {  -->
@@ -53,14 +42,8 @@
           </div>
 
           <!-- end of template for order card -->
-
       </div>
     </div>
-    <form action="">
-      <button class="confirm" type="submit">
-        Confirm Order
-      </button>
-    </form>
   </main>
   <%- include('partials/_footer') %>
 </body>
