--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -9,12 +9,11 @@
   <!-- <link rel="stylesheet" href="../styles/admin.css"> -->
   <link rel="stylesheet" href="../styles/order_details.css">
 
-
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
   <script src="/scripts/app.js"></script>
 
-  <title>Admin</title>
+  <title>Admin Confirmation</title>
 </head>
 <body>
   <%- include('partials/_header') %>
@@ -22,22 +21,15 @@
     <!-- Start of Template for incoming individual orders -->
     <div class="waiting-confirmation">
       <div class="header">
-        <h2>Orders waiting for confirmation</h2>
+        <h2>The customer order has been confirmed</h2>
       </div>
       <div class="main">
         <div class="left">
-          <h3>Incoming Order Details</h2>
+          <h3>Message has been sent via SMS</h2>
 
-          <h3>ORDER ID:<%= order.id %></h3>
-              <h3>STATUS:<%= order.order_status %></h3>
 
         </div>
-        <div class="right">
-          <form action="/admin/orders/<%= order.id %>" method="POST">
-            <input class="estimated-time" name='ETA' type="number" placeholder="Enter pickup time">
-            <button type="submit" class="confirm">Accept Order</button>
-          </form>
-        </div>
+
       </div>
       <hr>
     </div>
