--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,18 @@
+<!-- External CSS -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<style> @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap');</style>
+
+<!-- CSS -->
+<link rel="stylesheet" href="../styles/menu.css">
+<link rel="stylesheet" href="../styles/layout.css">
+<link rel="stylesheet" href="../styles/typography.css">
 <link rel="stylesheet" href="../../styles/header.css">
+
 <header>
   <nav>
     <div class="logo">
