Update styles of admin pages

--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -214,3 +214,6 @@ main {
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.10) 0px 1px 3px 0px;
 }
+#my-cart-text {
+  font-family: 'Baloo Chettan 2', sans-serif;
+}
