--- a/styles/admin.scss
+++ b/styles/admin.scss
@@ -1,55 +1,32 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-}
-
-
-// Orders waiting for confirmation
 
 .waiting-confirmation {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: 60%;
-  margin: 20px;
+  margin-top: 6rem;
+  margin-bottom: 20rem;
+  max-width: 100%;
+  // width: 60%;
+  // margin: 20px;
 }
 
-.waiting-confirmation .main {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.waiting-confirmation .main > .left {
-
-}
-
-.waiting-confirmation .main > .right{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.waiting-confirmation .main > .right > form {
+.order-message {
+  // position: absolute;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  padding: 1.2em;
+  margin-top: 1.2em;
+  z-index: 8;
 }
 
-hr {
-  width: 100%;
-  color: gray;
-  margin: 10px;
+.order-message-text {
+  font-family: 'Baloo Chettan 2', sans-serif;
+}
+
+.order-detail {
+  margin-top: 0;
 }
 
 
