--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -4,36 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Confirmation</title>
 
   <!-- CSS -->
-  <!-- <link rel="stylesheet" href="../styles/admin.css"> -->
-  <link rel="stylesheet" href="../styles/order_details.css">
+  <link rel="stylesheet" href="../styles/admin.css">
+  <!-- <link rel="stylesheet" href="../styles/order_details.css"> -->
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
   <script src="/scripts/app.js"></script>
 
-  <title>Admin Confirmation</title>
 </head>
 <body>
   <%- include('partials/_header') %>
   <main>
     <!-- Start of Template for incoming individual orders -->
     <div class="waiting-confirmation">
-      <div class="header">
+      <div class="order-message">
         <h2>The customer order has been confirmed</h2>
+        <h3>Message has been sent via SMS</h2>
       </div>
-      <div class="main">
-        <div class="left">
-          <h3>Message has been sent via SMS</h2>
-
-
-        </div>
-
-      </div>
-      <hr>
     </div>
     <!-- End of Template for incoming individual orders -->
   </main>
+  <%- include('partials/_footer') %>
 </body>
 </html>
