--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -8,7 +8,6 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/admin.css">
-  <!-- <link rel="stylesheet" href="../styles/order_details.css"> -->
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
@@ -21,8 +20,11 @@
     <!-- Start of Template for incoming individual orders -->
     <div class="waiting-confirmation">
       <div class="order-message">
-        <h2>The customer order has been confirmed</h2>
-        <h3>Message has been sent via SMS</h2>
+        <h2>The customer's order is on its way!</h2>
+        <h3 class="order-detail">A confirmation message has been sent via SMS.</h2>
+        <div class="cropped">
+          <img id="happy-drinks" src="https://cdn3.vectorstock.com/i/1000x1000/11/92/cute-bubble-tea-or-boba-tea-cartoon-with-mbe-style-vector-29911192.jpg">
+        </div>
       </div>
     </div>
     <!-- End of Template for incoming individual orders -->
